@@ -48,6 +48,8 @@ val match_case :
   (MLast.patt * MLast.expr option MLast.v * MLast.expr) Grammar.Entry.e;;
 val constructor_declaration :
   (MLast.loc * string MLast.v * MLast.ctyp list MLast.v) Grammar.Entry.e;;
+val label_declaration :
+  (MLast.loc * string * bool * MLast.ctyp) Grammar.Entry.e;;
 val with_constr : MLast.with_constr Grammar.Entry.e;;
 val poly_variant : MLast.poly_variant Grammar.Entry.e;;
 val class_sig_item : MLast.class_sig_item Grammar.Entry.e;;
