@@ -26,6 +26,7 @@ Grammar.Unsafe.clear_entry ctyp;
 Grammar.Unsafe.clear_entry let_binding;
 Grammar.Unsafe.clear_entry type_declaration;
 Grammar.Unsafe.clear_entry constructor_declaration;
+Grammar.Unsafe.clear_entry label_declaration;
 Grammar.Unsafe.clear_entry match_case;
 Grammar.Unsafe.clear_entry with_constr;
 Grammar.Unsafe.clear_entry poly_variant;
@@ -131,6 +132,7 @@ Grammar.extend
    and _ = (type_declaration : 'type_declaration Grammar.Entry.e)
    and _ =
      (constructor_declaration : 'constructor_declaration Grammar.Entry.e)
+   and _ = (label_declaration : 'label_declaration Grammar.Entry.e)
    and _ = (match_case : 'match_case Grammar.Entry.e)
    and _ = (ipatt : 'ipatt Grammar.Entry.e)
    and _ = (with_constr : 'with_constr Grammar.Entry.e)
@@ -179,8 +181,6 @@ Grammar.extend
      grammar_entry_create "constrain"
    and type_parameter : 'type_parameter Grammar.Entry.e =
      grammar_entry_create "type_parameter"
-   and label_declaration : 'label_declaration Grammar.Entry.e =
-     grammar_entry_create "label_declaration"
    and ident : 'ident Grammar.Entry.e = grammar_entry_create "ident"
    and mod_ident : 'mod_ident Grammar.Entry.e =
      grammar_entry_create "mod_ident"
