@@ -1,6 +1,9 @@
 Camlp5 Version 5.12:
 --------------------
 
+* [31 Dec 08] In macros (pa_macro.cmo):
+  - added ability to use IFDEF and IFNDEF for record labels declarations.
+
 Camlp5 Version 5.11:
 --------------------
 
